syntax = "proto3";

package blocklog.grpc;

option go_package = "github.com/shifty11/blocklog-backend/grpc/auth";

service AuthService {
  rpc KeplrLogin (KeplrLoginRequest) returns (LoginResponse) {}
  rpc RefreshAccessToken (RefreshAccessTokenRequest) returns (RefreshAccessTokenResponse) {}
}

message PubKey {
  string type = 1;
  bytes value = 2;
}

message Signature {
  PubKey pub_key = 1;
  bytes signature = 2;
}

message KeplrLoginRequest {
  string signedMessage = 1;
  string signature = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshAccessTokenRequest {
  string refresh_token = 1;
}

message RefreshAccessTokenResponse {
  string access_token = 1;
}
